# GenSoundAD

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  school_schedule.json  tsconfig.app.json  vite.config.ts
.github/: ARCHITECTURE.md  CACHING.md
.github/workflows/: ci.yml  dev.yml  release.yml
scripts/: download-ffmpeg.ps1  download-ffmpeg.sh  prepare-release.ps1  prepare-release.sh
src/: main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/binaries/linux/: INSTALL_FFMPEG.txt
src-tauri/binaries/macos/: INSTALL_FFMPEG.txt
src-tauri/binaries/windows/: INSTALL_FFMPEG.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: mod.rs  processor.rs  types.rs
src/app/: index.tsx
src/app/context/: context.ts  hooks.ts  index.tsx  types.ts
src/app/router/: index.tsx
src/app/styles/: reset.css
src/features/components/: AdTypesManager.tsx  ConfigureList.tsx  ConfigureRow.tsx  CustomDateField.tsx  DnD.tsx  Header.tsx  Player.tsx  PlayerRow.tsx  SoundList.tsx  SoundRow.tsx  Stage1.tsx  Stage2.tsx  Stage3.tsx  TabPanelContent.tsx  Tabs.tsx  TabsManager.tsx  ValidationAlerts.tsx  ValidationErrorsModal.tsx  ValidationStatus.tsx  index.ts
src/features/components/buttons/: AddConfigureRowButton.tsx  AddInEachArrangementButton.tsx  ConfigureRowButton.tsx  CutSourceButton.tsx  LoadLayoutButton.tsx  (+5 more)
src/page/: Index.tsx
src/shared/: audioComposer.ts  audioTools.ts  data.ts  exportValidation.ts  file.ts  player.ts  tauriAudioAPI.ts  time.ts  timeValidation.ts  useArrangementTiming.ts
(+7 files in other folders)
