[package]
name = "gensoundad"
version = "0.0.6"
description = "Генератор аудио контента с рекламными вставками - профессиональный инструмент для создания многочасовых плейлистов"
authors = ["Noradrenalin Team <dev@noradrenalin.team>"]
license = "MIT"
repository = "https://github.com/Noradrenalin-team/GenSoundAD"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gensoundad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2.0.0"
rfd = "0.14"
# Audio processing dependencies
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
